@@ -1,3 +1,9 @@
+2013-11-21  Jeff Law  <law@redhat.com>
+
+	PR tree-optimization/59221
+	* tree-ssa-threadedge.c (thread_across_edge): Properly manage
+	temporary equivalences when threading through joiner blocks.
+
 2013-11-21  Joseph Myers  <joseph@codesourcery.com>
 
 	PR rtl-optimization/55950
